<!--
  ~ /**
  ~  * Copyright (C) 2018-2019 DataSwift Ltd
  ~  *
  ~  * SPDX-License-Identifier: MPL2
  ~  *
  ~  * This file is part of the Hub of All Things project (HAT).
  ~  *
  ~  * This Source Code Form is subject to the terms of the Mozilla Public
  ~  * License, v. 2.0. If a copy of the MPL was not distributed with this
  ~  * file, You can obtain one at http://mozilla.org/MPL/2.0/
  ~  */
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:clipToPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/createViewBackground">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_height"
                android:paddingTop="@dimen/bar_padding"
                android:background="@color/toolbar_color"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

            <ImageView
                    android:id="@+id/back_button_create_account_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="0dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:src="@drawable/back_arrow_toolbar"
                    tools:layout_editor_absoluteY="38dp"/>

            <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/create_account_toolbar"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_medium"
                    tools:layout_editor_absoluteY="46dp"
                    tools:layout_editor_absoluteX="95dp"/>
        </androidx.appcompat.widget.Toolbar>

        <include
                layout="@layout/error_message"
                android:id="@+id/errorIncl"
                android:layout_height="45dp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <TextView
                android:text="@string/create_your_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textSize="20sp"
                android:textColor="@color/createViewDarkBlue"
                app:layout_constraintHorizontal_bias="0.503"
                android:layout_marginTop="72dp"
                app:layout_constraintTop_toTopOf="@+id/errorIncl"
                />

        <EditText
                android:id="@+id/createUsernameEt"
                android:layout_width="0dp"
                app:layout_constraintWidth_max="400dp"

                android:layout_height="45dp"
                android:background="#ffffff"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/enter_a_name"
            android:textColor="@color/createViewDarkBlue"
            android:inputType="textPersonName|textNoSuggestions"
                android:maxLength="21"
                android:textAllCaps="false"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:textSize="14sp"
                />


        <Button
                android:id="@+id/nextCreateUsernameV2Btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_max="400dp"
                android:enabled="true"
                android:text="@string/next"
                android:stateListAnimator="@null"

                android:background="@drawable/button_enabled_rounded"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:fontFamily="@font/roboto_medium"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginTop="40dp"/>

        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                app:layout_constraintGuide_end="615dp"/>

        <TextView
                android:text="@string/choose_a_name_for_your_hat_pda_s_unique_url"
                android:layout_width="0dp"
                app:layout_constraintWidth_max="400dp"

                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"/>

        <TextView
                android:text="@android:string/cancel"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/cancelUsernameBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto"
                android:textColor="@color/createGreyLight172"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/nextCreateUsernameV2Btn"/>

        <TextView
                android:text="@string/create_hat_username_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintWidth_max="400dp"
                app:layout_constraintTop_toBottomOf="@+id/createUsernameEt"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>