<!--
  ~ /**
  ~  * Copyright (C) 2018-2019 DataSwift Ltd
  ~  *
  ~  * SPDX-License-Identifier: MPL2
  ~  *
  ~  * This file is part of the Hub of All Things project (HAT).
  ~  *
  ~  * This Source Code Form is subject to the terms of the Mozilla Public
  ~  * License, v. 2.0. If a copy of the MPL was not distributed with this
  ~  * file, You can obtain one at http://mozilla.org/MPL/2.0/
  ~  */
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:clipToPadding="true"
            android:id="@+id/scrollView2">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:fitsSystemWindows="false"
            android:layout_width="match_parent"
            android:background="@color/createViewBackground">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_height"
                android:paddingTop="@dimen/bar_padding"
                android:background="@color/toolbar_color"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

            <ImageView
                    android:id="@+id/back_button_create_account_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="0dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:src="@drawable/back_arrow_toolbar"
                    tools:layout_editor_absoluteY="38dp"/>

            <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/create_account_toolbar"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_medium"
                    tools:layout_editor_absoluteY="46dp"
                    tools:layout_editor_absoluteX="95dp"/>
        </androidx.appcompat.widget.Toolbar>

        <include
                layout="@layout/error_message"
                android:id="@+id/errorIncl"
                android:layout_height="45dp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <TextView
                android:text="Enter your email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textSize="20sp"
                android:textColor="@color/createViewDarkBlue"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintTop_toBottomOf="@+id/errorIncl"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                android:layout_marginTop="72dp"
                app:layout_constraintVertical_bias="0.0"/>

        <TextView
                android:text="@string/this_information_is_only_used_to_create_your_hat_microserver_your_personal_information_will_never_be_shared_with_anyone_unless_you_authorise_it"
                android:layout_width="0dp"
                app:layout_constraintWidth_max="400dp"

                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:fontFamily="@font/roboto"
                android:textSize="14sp"
                android:layout_marginTop="32dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:textAlignment="center"
                android:textColor="@color/createViewSubtitleLight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <EditText
                android:id="@+id/createFirstNameEt"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#ffffff"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/first_name_create"
                android:inputType="textPersonName"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textColor="#4a556b"
                android:layout_marginTop="42dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"/>

        <EditText
                android:id="@+id/createLastNameEt"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#ffffff"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/last_name_create"
                android:inputType="textPersonName"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textColor="#4a556b"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@+id/createFirstNameEt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"/>

        <EditText
                android:id="@+id/createEmailEt"
                android:layout_width="0dp"
                android:layout_height="48dp"
                app:layout_constraintWidth_max="400dp"
                android:background="#ffffff"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/email_address_create"
                android:inputType="textEmailAddress"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:textColor="@color/createViewDarkBlue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintBottom_toTopOf="@+id/nextCreateNameEmailBtn"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintVertical_bias="0.0"/>

        <Button
                android:id="@+id/nextCreateNameEmailBtn"
                android:layout_width="0dp"
                app:layout_constraintWidth_max="400dp"

                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/next"
                android:stateListAnimator="@null"

                android:background="@drawable/button_enabled_rounded"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:fontFamily="@font/roboto_medium"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/createEmailPrivacyPolicy"
                />

        <TextView
                android:text="@android:string/cancel"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/cancelMailBtn"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:fontFamily="@font/roboto"
                android:textColor="@color/createGreyLight172"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/nextCreateNameEmailBtn"/>

        <CheckBox
                android:text="Subscribe to MadHATTERs (Tech news, HAT slanted)"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/createViewSubtitleLight"
                app:layout_constraintWidth_max="380dp"

                android:button="@drawable/checkbox"
                android:paddingStart="7dp"
                android:drawablePadding="20dp"
                android:paddingEnd="7dp"
                android:id="@+id/checkBoxOptins"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/createEmailEt"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                />

        <TextView
                android:text="You can change your mind at any time by clicking the unsubscribe link in the footer of any email you receive from us. Learn how we treat your information with respect in our privacy policy. By clicking ‘Next’ you agree to have read the privacy policy."
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/createEmailPrivacyPolicy"
                app:layout_constraintWidth_max="400dp"

                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxOptins"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/createViewSubtitleLight"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>